Add return to template (#12)

--- a/packages/generator/templates/ClientInstance.js.hbs
+++ b/packages/generator/templates/ClientInstance.js.hbs
@@ -1,15 +1,15 @@
 import { BaseClient } from "./core"
 
 export default class extends BaseClient {
-    constructor() {
-        super("{{servers/0/url}}");
-    }
+  constructor() {
+    super("{{servers/0/url}}");
+  }
 
 {{#each endPoints}}
 {{#each operations}}
-    {{name}}() {
-        this.{{method}}("{{../path}}");
-    }
+  {{name}}() {
+    return this.{{method}}("{{../path}}");
+  }
 
 {{/each}}
 {{/each}}
