Updated to output proper index file (#14)

--- a/packages/generator/templates/index.js.hbs
+++ b/packages/generator/templates/index.js.hbs
@@ -1,4 +1,6 @@
 {{#each apiSpec}}
-export * from {{boundedContext}}.js  
-
+import {default as {{boundedContext}} } from "./{{boundedContext}}"
+export let {{boundedContext}}Client = new {{boundedContext}}(); 
 {{/each}}
+
+
