Br/path parameters.w 6654066 (#16)
* Add path parameters

* Add tests for Resource class

* Change to single parameters map

* Add query parameters

* Fix client

* Fix

* Add comment

* Stronger typing

* Make additional parameters to get optional

--- a/packages/generator/templates/ClientInstance.js.hbs
+++ b/packages/generator/templates/ClientInstance.js.hbs
@@ -1,4 +1,4 @@
-import { BaseClient } from "./core"
+import { BaseClient } from "./core";
 
 export default class extends BaseClient {
   constructor() {
@@ -7,8 +7,43 @@ export default class extends BaseClient {
 
 {{#each endPoints}}
 {{#each operations}}
-  {{name}}() {
-    return this.{{method}}("{{../path}}");
+  /**
+  * {{description}}
+  */
+  {{name}}(parameters = {}) {
+    const pathParameters = {
+{{#each ../parameters}}      "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
+{{/each}}
+    };
+
+{{#if ../parameters}}
+    for (let param in pathParameters) {
+      if (pathParameters[param] === undefined
+          || pathParameters[param] === null) {
+        throw new Error(`Parameter '${param}' is required when calling {{name}}`);
+      }
+    }
+
+{{/if}}
+    const queryParameters = {
+{{#each request/queryParameters}}      "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
+{{/each}}
+    }
+
+    const requiredQueryParameters = [];
+{{#each request/queryParameters}}{{#is required "true"}}    requiredQueryParameters.push("{{name}}");
+{{/is}}{{/each}}
+
+{{#if request/queryParameters}}
+    for (let param in requiredQueryParameters) {
+      if (queryParameters[param] === undefined
+          || queryParameters[param] === null) {
+        throw new Error(`Parameter '${param}' is required when calling {{name}}`);
+      }
+    }
+
+{{/if}}
+    return this.{{method}}("{{../path}}", pathParameters, queryParameters);
   }
 
 {{/each}}
