Ja/finish migration 2 typescript (#18)
* Updated To make tests work and use gulp to build

* Fixed gulpfile

* Cleaned more stuff up

* More refactoring to clean things up

* Updated tmp directory name, added HTML test reports

* Ignored files for coverage.  Brian has a pr with tests for these files so once one is merged we will fix conflicts by merging them together

* Mixxed an export that prevented compoilation

* Add resource to test coverage

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,4 +1,4 @@
-import { BaseClient } from "./core";
+import { BaseClient, Response } from "./core"
 
 export default class extends BaseClient {
   constructor() {
@@ -10,7 +10,7 @@ export default class extends BaseClient {
   /**
   * {{description}}
   */
-  {{name}}(parameters = {}) {
+  {{name}}(parameters = {}): Promise<Response> {
     const pathParameters = {
 {{#each ../parameters}}      "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
 {{/each}}
