Br/bounded context config.w 6746455 (#23)
* Add amf-client-js

* Remove .babelrc

* Add config object

* Fix gulp

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,8 +1,11 @@
-import { BaseClient, Response } from "./core"
+import { BaseClient, ClientConfig, Response } from "./core"
 
 export default class extends BaseClient {
-  constructor() {
-    super("{{servers/0/url}}");
+  constructor(config: ClientConfig = new ClientConfig()) {
+    if (!!!config.baseUri) {
+      config.baseUri = "{{servers/0/url}}";
+    }
+    super(config);
   }
 
 {{#each endPoints}}
