Ka/sdk dto type generator (#28)
* DTO generator with limited datatype support and test cases

* Updated compiler options to conform to findings

* Updated to remove uneeded dependencies

* fix test failure

* Fixed conflicts..ensured workign tests. enabled strict

* used renderTempaltes as gulp task instead of buildInt

* removed gulp tasks and called just gulp

* Updated gulpfile for formating rules

* Make the sdk wit hproducts work again

* Updated again to provide a better TS/JS mix, need to discuss

* removed DTO generation from the gulp tasks

* removed DTO from the generator

* Validating empty root and files before compiling the templates

* Added validation for empty properties

* Code review comments

* Used async await in TypesRenderer

* Added render types to default gulp

* Removed '?' from property name

--- a/packages/generator/templates/dto.ts.hbs
+++ b/packages/generator/templates/dto.ts.hbs
@@ -1,9 +1,16 @@
 {{#each .}}
-export class {{name}} {
-    constructor(
-    {{#each properties}}
-        {{name}}?: {{getDataType range/dataType range/inherits}}{{#unless @last}},{{/unless}}
-    {{/each}}) {}
+export class {{pascalcase (getValue name)}} {
+    {{#each (onlyRequired properties)}}
+        public {{camelcase (getValue name)}}: {{getDataType range/dataType range/inherits}};
+    {{/each}}
+    {{#each (onlyOptional properties)}}
+        public {{camelcase (getValue name)}}?: {{getDataType range/dataType range/inherits}};
+    {{/each}}
+
+    {{#if properties}}
+        constructor(
+        ) {}
+    {{/if}}
 }
 
 {{/each}}
