Ka/pr2 return dto from client.w 6746439 (#35)
* Merge master branch and resolve differences

* Add delete to core

* Filter for supported methods

* init commit

* added helpers

* Deleted unnecessary file

* Construct DTO from Array and Object jsons

* Removed product raml typo in gulp task

* Removed product raml

* Construct for array datatypes

* Return response datatype if available

* Check for valid object or array before initializing the objects

* Code review comments

* Test cases for isTypeDefined method added separately

* Removed exports from template helpers and removed handlebar helper methods for changing case

* Changed test names and used res.ok

* Remove unsupported class names

* Added null checks for properties in exported functions

* Removed type renderer and moved template compiling to renderer

* Removed unused variable

* More test cases and string literal array checks

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,5 +1,6 @@
 import { BaseClient, ClientConfig, Response, ResponseError } from "./core"
 
+
 export default class extends BaseClient {
   constructor(config: ClientConfig = new ClientConfig()) {
     if (!!!config.baseUri) {
@@ -8,7 +9,7 @@ export default class extends BaseClient {
     super(config);
   }
 
-{{#each endPoints}}
+{{#each model.encodes.endPoints}}
 {{#each operations}}
 {{#or (is method "get") (is method "delete") (is method "post")}}
   /**
