--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,7 +1,6 @@
-import { BaseClient, ClientConfig, Response, ResponseError } from "./core"
+import { BaseClient, ClientConfig, ResponseError } from "./core"
 
-
-export default class extends BaseClient {
+export class Client extends BaseClient {
   constructor(config: ClientConfig = new ClientConfig()) {
     if (!!!config.baseUri) {
       config.baseUri = "{{servers/0/url}}";
