Move prasing logic to base client and update tests

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -47,14 +47,7 @@ export class Client extends BaseClient {
     }
 
 {{/if}}
-    return this.{{method}}("{{../path}}", pathParameters, queryParameters{{#is method "post"}}, body{{/is}})
-               .then(res => {
-                 if (res.ok) {
-                   return res.json();
-                 } else {
-                   throw new ResponseError(res);
-                 }
-               });
+    return this.{{method}}("{{../path}}", pathParameters, queryParameters{{#is method "post"}}, body{{/is}});
   }
 
 {{/or}}
