--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -29,7 +29,9 @@ export class Client extends BaseClient {
       /**
       * {{description}}
       */
-      {{name}}(parameters = {}{{#or (is method "post") (is method "put")}}, body: {{request.payloads.[0].schema.inherits.[0].linkTarget.name}}{{/or}}): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
+      {{name}}(
+        parameters = {}{{#or (is method "post") (is method "put")}}, body: {{request.payloads.[0].schema.inherits.[0].linkTarget.name}}{{/or}}
+      ): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
 
         const pathParameters = {
     {{#each ../parameters}}      
