Add typed parameters

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -29,7 +29,18 @@ export class Client extends BaseClient {
       * {{description}}
       */
       {{name}}(
-        parameters = {}{{#or (is method "patch") (is method "post") (is method "put")}}, body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
+        {{#and (isEmpty ../parameters) (equalsLength request.queryParameters 0)}}
+          {{#or (is method "patch") (is method "post") (is method "put")}}body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
+        {{else}}
+        parameters: {
+          {{#each ../parameters}}
+          {{name}}: any
+          {{/each}}
+          {{#each request/queryParameters}}
+          {{name}}{{#if (not (is required "true"))}}?{{/if}}: any
+          {{/each}}
+        }{{#or (is method "patch") (is method "post") (is method "put")}}, body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
+        {{/and}}
       ): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
 
         const pathParameters = {
@@ -38,36 +49,11 @@ export class Client extends BaseClient {
     {{/each}}
         };
 
-    {{#if ../parameters}}
-        for (let param in pathParameters) {
-          if (pathParameters[param] === undefined
-              || pathParameters[param] === null) {
-            throw new Error(`Parameter '${param}' is required when calling {{name}}`);
-          }
-        }
-    {{/if}}
-
         const queryParameters = {
     {{#each request/queryParameters}}      
       "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
     {{/each}}
         }
-
-        const requiredQueryParameters = [];
-    {{#each request/queryParameters}}
-      {{#is required "true"}} 
-        requiredQueryParameters.push("{{name}}");
-      {{/is}}
-    {{/each}}
-
-    {{#if request/queryParameters}}
-        for (let param in requiredQueryParameters) {
-          if (queryParameters[param] === undefined
-              || queryParameters[param] === null) {
-            throw new Error(`Parameter '${param}' is required when calling {{name}}`);
-          }
-        }
-    {{/if}}
 
     // @ts-ignore
     return StaticClient.{{method}}({
