--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -29,7 +29,7 @@ export class Client extends BaseClient {
       * {{description}}
       */
       {{name}}(
-        parameters?: {
+        parameters{{#or (is method "get") (is method "delete")}}?{{/or}}: {
           {{#each ../parameters}}
           {{name}}: any
           {{/each}}
