Group by bounded context, used separate raml

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -4,7 +4,7 @@ import {
 {{#each models}}
 {{#each declares}}
     {{#eq $classData.name "amf.client.model.domain.NodeShape"}}
-        {{getValue name}}{{#unless @last}},{{/unless}}
+        {{getValue name}},
     {{/eq}}
 {{/each}}
 {{/each}}
