--- a/packages/generator/templates/dto.ts.hbs
+++ b/packages/generator/templates/dto.ts.hbs
@@ -1,4 +1,5 @@
 {{#each .}}
+{{#each .}}
 {{#eq $classData.name "amf.client.model.domain.NodeShape"}}
 export type {{getValue name}} = {
     {{#each (onlyRequired properties)}}
@@ -9,9 +10,5 @@ export type {{getValue name}} = {
     {{/each}}
 }
 {{/eq}}
-
 {{/each}}
-
-
-
-
+{{/each}}
