--- a/packages/generator/templates/index.ts.hbs
+++ b/packages/generator/templates/index.ts.hbs
@@ -1,5 +1,5 @@
 {{#each apiSpec}}
-export { Client as {{capitalize boundedContext}} } from "./{{boundedContext}}";
+export { Client as {{capitalize .}} } from "./{{.}}";
 {{/each}}
 
 
