--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -26,6 +26,7 @@ export class Client extends BaseClient {
         {{/each}}
     {{/each}}
   }
+
 {{#each models}}
     {{> operations model=. }}
 {{/each}}
@@ -33,3 +34,4 @@ export class Client extends BaseClient {
 }
 
 export default Client;
+export { ClientConfig };
