--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -4,38 +4,36 @@
       * {{description}}
       */
       {{name}}(
-        {{#and (isEmpty ../parameters) (equalsLength request.queryParameters 0)}}
-          {{#or (is method "patch") (is method "post") (is method "put")}}body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
-        {{else}}
-        parameters: {
+        parameters{{#or (is method "get") (is method "delete")}}?{{/or}}: {
           {{#each ../parameters}}
           {{name}}: any
           {{/each}}
           {{#each request/queryParameters}}
           {{name}}{{#if (not (is required "true"))}}?{{/if}}: any
           {{/each}}
+          headers?: { [key: string]: string }
         }{{#or (is method "patch") (is method "post") (is method "put")}}, body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
-        {{/and}}
       ): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
 
         const pathParameters = {
-    {{#each ../parameters}}
+    {{#each ../parameters}}      
       "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
     {{/each}}
         };
 
         const queryParameters = {
-    {{#each request/queryParameters}}
+    {{#each request/queryParameters}}      
       "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
     {{/each}}
         }
 
     // @ts-ignore
     return StaticClient.{{method}}({
-          client: this,
+          client: this, 
           path: "{{../path}}",
-          pathParameters: pathParameters,
-          queryParameters: queryParameters{{#or (is method "patch") (is method "post") (is method "put")}}, body: body{{/or}}{{getSecurityScheme ", authScheme: " security}}
+          pathParameters: pathParameters, 
+          queryParameters: queryParameters,
+          headers: parameters.headers{{#or (is method "patch") (is method "post") (is method "put")}}, body: body{{/or}}{{getSecurityScheme ", authScheme: " security}}
       });
     }
 
