Fix issue which sets optional query parameters to undefined if they are not passed

--- a/packages/generator/templates/ClientInstance.ts.hbs
+++ b/packages/generator/templates/ClientInstance.ts.hbs
@@ -1,4 +1,5 @@
 import { StaticClient, BaseClient, ClientConfig, ResponseError, AuthSchemes } from "@commerce-sdk/core";
+import _ from "lodash";
 
 import {
 {{#each dataTypes}}
