--- a/packages/generator/templates/operations.ts.hbs
+++ b/packages/generator/templates/operations.ts.hbs
@@ -1,9 +1,10 @@
 {{#each model.encodes.endPoints}}
   {{#each operations}}
-      /**
-      * {{description}}
-      */
-      {{name}}(
+    /**
+    * {{description}}
+    */
+    {{name}}(
+      options{{#or (is method "get") (is method "delete")}}?{{/or}}: {
         parameters{{#or (is method "get") (is method "delete")}}?{{/or}}: {
           {{#each ../parameters}}
           {{name}}: any
@@ -11,29 +12,30 @@
           {{#each request/queryParameters}}
           {{name}}{{#if (not (is required "true"))}}?{{/if}}: any
           {{/each}}
-          headers?: { [key: string]: string }
-        }{{#or (is method "patch") (is method "post") (is method "put")}}, body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
-      ): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
-
-        const pathParameters = {
-    {{#each ../parameters}}
-      "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
-    {{/each}}
-        };
-
-        const queryParameters = {
-    {{#each request/queryParameters}}
-      "{{name}}": parameters["{{name}}"]{{#unless @last}},{{/unless}}
-    {{/each}}
         }
+        headers?: { [key: string]: string }
+      }{{#or (is method "patch") (is method "post") (is method "put")}}, body: {{default request.payloads.[0].schema.inherits.[0].linkTarget.name "object"}}{{/or}}
+    ): Promise<{{#if (eq (isReturnPayloadDefined .) true)}}{{getReturnPayloadType .}}{{else}}object{{/if}}> {
+    
+      const params = options ? _.clone(options.parameters) : {};
+      
+      const pathParameters = {
+      {{#each ../parameters}}
+        "{{name}}": params["{{name}}"]{{#unless @last}},{{/unless}}
+      {{/each}}
+      }
 
-    // @ts-ignore
-    return StaticClient.{{method}}({
-          client: this,
-          path: "{{../path}}",
-          pathParameters: pathParameters,
-          queryParameters: queryParameters,
-          headers: (parameters || {}).headers{{#or (is method "patch") (is method "post") (is method "put")}}, body: body{{/or}}{{getSecurityScheme ", authScheme: " security}}
+    {{#each ../parameters}}
+      delete params["{{name}}"];
+    {{/each}}
+
+      // @ts-ignore
+      return StaticClient.{{method}}({
+        client: this,
+        path: "{{../path}}",
+        pathParameters: pathParameters,
+        queryParameters: params,
+        headers: (options || {}).headers{{#or (is method "patch") (is method "post") (is method "put")}}, body: body{{/or}}{{getSecurityScheme ", authScheme: " security}}
       });
     }
 
